--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.3"
